--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <div>
         <h1>Testing</h1>
         <p>This is a paragraph</p>
+        <p>This is 2nd paragraph</p>
     </div>
 </body>
 
